src/test/deca/syntax/valid/exemple_arith.deca
// Description:
//   Programme pour vérifier les overflow de calculs arithmétiques
//
// Resultats:
//
//
//
// Historique:
//    cree le 01/01/2023

{
int x = (((((1+1)+(1+1))+((1+1)+(1+1)))+(((1+1)+(1+1))+((1+1)+(1+1))))+((((1+1)+(1+1))+((1+1)+(1+1)))+(((1+1)+(1+1))+((1+1)+(1+1)))))+(((((1+1)+(1+1))+((1+1)+(1+1)))+(((1+1)+(1+1))+((1+1)+(1+1))))+((((1+1)+(1+1))+((1+1)+(1+1)))+(((1+1)+(1+1))+((1+1)+(1+1)))));
}