src/test/deca/syntax/invalid/unfinished_op_lex_01.deca
// Description:
//    tests de programme correct lexicalement (opération arithmétique non finie)
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 03/01/2023

{
    int x = 4+;
}